--- a/apps/web/src/pages/kitchen-sink/button.astro
+++ b/apps/web/src/pages/kitchen-sink/button.astro
@@ -16,9 +16,10 @@ import {
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Button</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Variants">
       <div class="flex items-center gap-2 flex-wrap">
         <Button>Default</Button>
@@ -113,5 +114,6 @@ import {
         <Button class="w-full" variant="outline">Full Width Outline</Button>
       </div>
     </KitchenSinkSection>
+    </div>
   </section>
 </KitchenSinkLayout>
