--- a/apps/web/src/pages/kitchen-sink/alert.astro
+++ b/apps/web/src/pages/kitchen-sink/alert.astro
@@ -12,9 +12,10 @@ import {
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Alert</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Default">
       <Alert>
         <TerminalIcon />
@@ -34,6 +35,7 @@ import {
         </AlertDescription>
       </Alert>
     </KitchenSinkSection>
+    </div>
 
     <KitchenSinkSection title="With Icons">
       <div class="space-y-3">
@@ -60,6 +62,7 @@ import {
       </div>
     </KitchenSinkSection>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Title Only">
       <Alert>
         <InfoIcon />
@@ -75,6 +78,7 @@ import {
         </AlertDescription>
       </Alert>
     </KitchenSinkSection>
+    </div>
 
     <KitchenSinkSection title="Custom Styled">
       <div class="space-y-3">
