--- a/apps/web/src/pages/kitchen-sink/checkbox.astro
+++ b/apps/web/src/pages/kitchen-sink/checkbox.astro
@@ -8,9 +8,10 @@ import { Button } from "@bejamas/ui/components/button";
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Checkbox</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Basic">
       <div class="flex items-center gap-2">
         <Checkbox id="basic-checkbox" />
@@ -69,6 +70,7 @@ import { Button } from "@bejamas/ui/components/button";
         </div>
       </fieldset>
     </KitchenSinkSection>
+    </div>
 
     <KitchenSinkSection title="Indeterminate">
       <p class="text-sm text-muted-foreground">
