--- a/apps/web/src/pages/kitchen-sink/dialog.astro
+++ b/apps/web/src/pages/kitchen-sink/dialog.astro
@@ -18,9 +18,10 @@ import { Label } from "@bejamas/ui/components/label";
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Dialog</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Basic">
       <Dialog>
         <DialogTrigger asChild>
@@ -173,6 +174,7 @@ import { Label } from "@bejamas/ui/components/label";
         </DialogContent>
       </Dialog>
     </KitchenSinkSection>
+    </div>
 
     <KitchenSinkSection title="Event Testing">
       <p class="text-sm text-muted-foreground">
