--- a/apps/web/src/pages/kitchen-sink/slider.astro
+++ b/apps/web/src/pages/kitchen-sink/slider.astro
@@ -11,9 +11,10 @@ import { Label } from "@bejamas/ui/components/label";
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Slider</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Basic Slider">
       <Label>Basic Slider (default value: 50)</Label>
       <Slider class="w-full" defaultValue={[50]} max={100}>
@@ -94,5 +95,6 @@ import { Label } from "@bejamas/ui/components/label";
         <SliderThumb />
       </Slider>
     </KitchenSinkSection>
+    </div>
   </section>
 </KitchenSinkLayout>
