--- a/apps/web/src/pages/kitchen-sink/tooltip.astro
+++ b/apps/web/src/pages/kitchen-sink/tooltip.astro
@@ -22,9 +22,10 @@ import {
 ---
 
 <KitchenSinkLayout>
-  <section class="max-w-2xl mx-auto py-20 px-5 space-y-12">
+  <section class="max-w-5xl mx-auto py-20 px-5 space-y-12">
     <h1 class="text-3xl font-bold mb-10">Tooltip</h1>
 
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-12">
     <KitchenSinkSection title="Basic">
       <Tooltip>
         <TooltipTrigger asChild>
@@ -224,6 +225,7 @@ import {
         </Tooltip>
       </div>
     </KitchenSinkSection>
+    </div>
 
     <KitchenSinkSection title="Event Testing">
       <p class="text-sm text-muted-foreground">
